Change API Response format for ease
